# ASMR

./: .mailmap  Cargo.toml  README.md
src/: .gitignore  array_utils.rs  attention.rs  batch_split.rs  batch_split_training_examples.rs  bunched_rollout.rs  game_data.rs  game_state.rs  game_tree.rs  game_tree_trait.rs  generate.rs  main.rs  matrix_bundle.rs  matrix_set.rs  matrix_sets.rs  network.rs  network_config.rs  network_game_tree.rs  network_module.rs  network_rollout.rs  network_tree.rs  neural_utils.rs  normal_inverse_chi_squared.rs  params.rs  peeling_states.rs  playout_sketches.rs  random_game_tree.rs  rollout_states.rs  synthetic_data.rs  training_example.rs  training_examples.rs  tree.rs  turn_data.rs  tweakable_tensor.rs  validation_set.rs  vector_set.rs  visit_logit_matrices.rs
