[package]
name = "ASMR"
version = "0.1.0"
authors = ["bubble-07 <spagrab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

statistical="1.0.0"
fixedbitset="0.4.2"
rayon="1.6.0"
ndarray={version = "0.15.4", features = ["blas", "serde"] }
ndarray-linalg={version = "0.14.1", features = ["openblas-static"]}
rand="0.8.4"
ndarray-rand="0.14.0"
rand_distr="0.4.2"
rand_core="0.6.3"
lapack-src = {version = "0.8", default-features = false, features = ["openblas"]}
bincode="1.3.3"
serde={version = "1.0.126", features = ["derive"] }
serde_json="1.0.59"
log="0.4.11"
tch="0.6.1"
shellexpand="2.1.0"
